/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+

 - On GNU systems, display a backtrace when a segmentation fault
   occurs, and DEBUG_BACKTRACE has been defined. (07-feb-2008, Brian
   Wheeler)
 - Fixed registration of ROM expansion address. (06-feb-2008, Camiel
   Vanderhoeven)
 - Check for FPEN in old floating point code. (06-feb-2008, Camiel
   Vanderhoeven)
 - Proper interrupt handling in serial port device. Fixes an
   initialization bug spotted by David Hittner. (06-feb-2008, Camiel
   Vanderhoeven)
 - Disable unaligned access check alltogether; it doesn't work properly
   for some reason. (05-feb-2008, Camiel Vanderhoeven)
 - The new floating point code (21-jan-2008) has some unidentified
   problems. The OpenVMS installation routine fails with this new code. 
   For now, the old floating point code has been restored, and the new
   floating-point code is used only when HAVE_NEW_FP has been defined.
   The new code should be fixed, so we can take advantage of floating
   point exceptions. (05-feb-2008, Camiel Vanderhoeven)
 - Display a message when system initialization has failed. (05-feb-2008,
   Brian Wheeler)
 - Put X64 around 64-bit constants in DO_CVTQL. (compilation issue on some
   Linux'es) (05-feb-2008, Camiel Vanderhoeven)
 - Corrected a typo in the definition of PCI_PTE_SHIFT (2 should be 12)
   that caused an OpenVMS procgone bugcheck. (04-feb-2008, Camiel
   Vanderhoeven)
 - Completed LPT support so it works with FreeBSD as a guest OS. 
   (02-feb-2008, Brian Wheeler)
 - Avoid unnecessary shift-operations to calculate constant values. 
   (01-feb-2008, Camiel Vanderhoeven)
 - Improved speed by remembering the number of instructions left in current
   memory page, so that the translation-buffer doens't need to be consulted
   on every instruction fetch when the Icache is disabled. (30-jan-2008,
   Camiel Vanderhoeven)
 - Remember separate last found translation-buffer entries for read and write 